Change image path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="profile-card">
-        <img class="profile" src="Images/profile.jpg" alt="this is formal pic"/>
+        <img class="profile" src="profilepic.jpg" alt="this is formal pic"/>
         <div>
             <h1>Mr Abhijeet Karle</h1>
             <p>Frontend Developer</p>
@@ -17,4 +17,5 @@
 
     </div>
 </body>
+
 </html>
